changes to css and services content

--- a/src/main.css
+++ b/src/main.css
@@ -2680,6 +2680,7 @@ html.no-csstransitions .home-content__main {
 .works-content {
   max-width: 1160px;
   margin-top: -23.4rem;
+  background:red;
 }
 
 /* ------------------------------------------------------------------- 
@@ -2954,6 +2955,7 @@ html.no-csstransitions .home-content__main {
  * works
  * ------------------------------------------------------------------- */
 @media only screen and (max-width: 800px) {
+ 
   .item-folio__title,
   .item-folio__cat {
     font-size: 1.3rem;
@@ -3375,6 +3377,7 @@ html.no-csstransitions .home-content__main {
 
 .contact-secondary .contact-info {
   position: relative;
+  text-align: center;
 }
 
 .contact-secondary .cinfo {
