--- a/src/components/masonry.css
+++ b/src/components/masonry.css
@@ -16,7 +16,13 @@
   justify-content: center;
   /* min-width: 350px; */
 }
-
+@media only screen and (max-width: 800px) {
+  .masonry-grid {
+    top: -20vh;
+    min-height: unset;
+    height: 25vh;
+  }
+}
 @media only screen and (max-width: 600px) {
   .masonry-grid {
     top: -35vh;
