--- a/src/main.css
+++ b/src/main.css
@@ -2680,7 +2680,7 @@ html.no-csstransitions .home-content__main {
 .works-content {
   max-width: 1160px;
   margin-top: -23.4rem;
-  background:red;
+  background: red;
 }
 
 /* ------------------------------------------------------------------- 
@@ -2955,7 +2955,13 @@ html.no-csstransitions .home-content__main {
  * works
  * ------------------------------------------------------------------- */
 @media only screen and (max-width: 800px) {
- 
+  .intro-wrap {
+    padding: 6rem 0 10rem !important;
+  }
+  .s-works {
+    padding-bottom: 25rem;
+    min-height: fit-content;
+  }
   .item-folio__title,
   .item-folio__cat {
     font-size: 1.3rem;
@@ -2964,7 +2970,7 @@ html.no-csstransitions .home-content__main {
 
 @media only screen and (max-width: 600px) {
   .s-works {
-    padding-bottom: 12rem;
+    padding-bottom: 55rem;
     min-height: fit-content;
   }
   .s-works .intro-wrap {
